[gd_scene load_steps=5 format=3 uid="uid://cau27yxfsho0c"]

[ext_resource type="Texture2D" uid="uid://bslshdo857a3l" path="res://ui/arrowLeft.png" id="1_7w6u8"]
[ext_resource type="Script" path="res://ui/number_selector.gd" id="1_t8h6n"]
[ext_resource type="Texture2D" uid="uid://clyms3tadc1uc" path="res://ui/numerals/numerals8.png" id="2_xpo2a"]
[ext_resource type="Texture2D" uid="uid://dyo07jpclmfqb" path="res://ui/arrowRight.png" id="3_35o02"]

[node name="NumberSelector" type="Node2D"]
script = ExtResource("1_t8h6n")

[node name="Left" type="Sprite2D" parent="."]
position = Vector2(-6, 0)
texture = ExtResource("1_7w6u8")

[node name="Number" type="Sprite2D" parent="."]
texture = ExtResource("2_xpo2a")
hframes = 10

[node name="Right" type="Sprite2D" parent="."]
position = Vector2(6, 0)
texture = ExtResource("3_35o02")

[node name="LeftArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftArea"]
polygon = PackedVector2Array(-3, -4, -3, 4, -6, 4, -9, 0, -6, -4)

[node name="RightArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightArea"]
polygon = PackedVector2Array(3, -4, 3, 4, 6, 4, 9, 0, 6, -4)

[connection signal="mouse_entered" from="LeftArea" to="." method="_on_left_area_mouse_entered"]
[connection signal="mouse_exited" from="LeftArea" to="." method="_on_left_area_mouse_exited"]
[connection signal="mouse_entered" from="RightArea" to="." method="_on_right_area_mouse_entered"]
[connection signal="mouse_exited" from="RightArea" to="." method="_on_right_area_mouse_exited"]
